--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,18 @@
 	<meta charset="utf-8">
 	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
 </head>
-<body>
-	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
-	<script src="js/d3touch.js"></script>
-	<div id="vizcontainer">
-		<svg></svg>
+
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<!-- <script src="http://d3js.org/colorbrewer.v1.min.js"></script> -->
+<script src="js/d3touch.js"></script>
+
+<body onload="touchDemo1()">
+
+<div id="vizcontainer">
+	<svg></svg>
+	<div id="buttons">
 	</div>
+</div>
+
 </body>
 </html>
