--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
 <!-- <script src="http://d3js.org/colorbrewer.v1.min.js"></script> -->
 <script src="js/d3touch.js"></script>
 
-<body onload="touchDemo1()">
+<body>
 
 <div id="vizcontainer">
-	<svg></svg>
-	<div id="buttons">
-	</div>
+	<svg>
+		<text x="20" y="40">Example SVG text 1</text>
+	</svg>
 </div>
 
 </body>
