--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <div id="vizcontainer">
 	<svg>
-		<text x="20" y="40">Example SVG text 1</text>
+		<text draggable='true' x="20" y="40">Example SVG text 1</text>
 	</svg>
 </div>
 
