--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>D3 Mobile Testing</title>
-	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
-</head>
+<meta charset="utf-8">
+<style>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<!-- <script src="http://d3js.org/colorbrewer.v1.min.js"></script> -->
-<script src="js/d3touch.js"></script>
+.active {
+  stroke: #000;
+  stroke-width: 2px;
+}
 
-<body>
+</style>
+<svg width="960" height="500"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script>
 
-<div id="vizcontainer">
-	<svg>
-		<text draggable='true' x="20" y="40">Example SVG text 1</text>
-	</svg>
-</div>
+var svg = d3.select("svg"),
+    width = +svg.attr("width"),
+    height = +svg.attr("height"),
+    radius = 32;
 
-</body>
-</html>
+var circles = d3.range(20).map(function() {
+  return {
+    x: Math.round(Math.random() * (width - radius * 2) + radius),
+    y: Math.round(Math.random() * (height - radius * 2) + radius)
+  };
+});
+
+var color = d3.scaleOrdinal()
+    .range(d3.schemeCategory20);
+
+svg.selectAll("circle")
+  .data(circles)
+  .enter().append("circle")
+    .attr("cx", function(d) { return d.x; })
+    .attr("cy", function(d) { return d.y; })
+    .attr("r", radius)
+    .style("fill", function(d, i) { return color(i); })
+    .call(d3.drag()
+        .on("start", dragstarted)
+        .on("drag", dragged)
+        .on("end", dragended));
+
+function dragstarted(d) {
+  d3.select(this).raise().classed("active", true);
+}
+
+function dragged(d) {
+  d3.select(this).attr("cx", d.x = d3.event.x).attr("cy", d.y = d3.event.y);
+}
+
+function dragended(d) {
+  d3.select(this).classed("active", false);
+}
+
+</script>
