--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>D3 Mobile Testing</title>
-	<meta charset="utf-8">
-	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
+ <title>D3 Mobile Testing</title>
+ <meta charset="utf-8">
+ <link type="text/css" rel="stylesheet" href="css/d3touch.css" />
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<!-- <script src="http://d3js.org/colorbrewer.v1.min.js"></script> -->
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="js/interact.js"></script>
 <script src="js/d3touch.js"></script>
+<body>
+<div id="no-drop" class="draggable drag-drop"> hello world </div>
 
-<body onload="dragndrop()">
+<div id="yes-drop" class="draggable drag-drop"> trigger </div>
 
-<!-- <div id="vizcontainer"> -->
-	<svg><rect id="rect" x="10" y="10" width="100" height="100"/></svg>
-	<p id='log'></p>
-<!-- </div> -->
-
+<div id="outer-dropzone" class="dropzone">
+  #outer-dropzone
+<div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
+</div>
 </body>
 </html>
