--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,22 @@
 	<title>D3 Mobile Testing</title>
 
 	<meta charset="utf-8">
-	<meta name = "viewport" content = "user-scalable=no, width=device-width">
+	<meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
 
-	<script src="https://d3js.org/d3.v3.min.js"></script>
-	<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+<!-- 	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
 	<script src="js/interact.js"></script>
-	<script src="js/d3touch.js"></script>
-	<script src="js/matter.min.js" type="text/javascript"></script>
-	<script src="js/matter_chains.js" type="text/javascript"></script>
+	<script src="js/interact_demo.js"></script>
+<!-- 	<script src="js/matter.min.js" type="text/javascript"></script>
+	<script src="js/matter_chains.js" type="text/javascript"></script> -->
 
 </head>
 
 
 <body>
+
 
 	<div id="no-drop" class="draggable drag-drop"> hello world </div>
 	<div id="yes-drop" class="draggable drag-drop"> trigger </div>
