--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,20 @@
 <head>
 
 	<title>D3 Mobile Testing</title>
-
 	<meta charset="utf-8">
 	<meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
+	<link type="text/css" rel="stylesheet" href="css/interact_demo.css" />
 
-<!-- 	<script src="https://d3js.org/d3.v3.min.js"></script>
-	<script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
+  <style>
+    div#plain-text {
+    	font-size: 16px;
+    	font-family: sans-serif;
+    }
+  </style>
+
+	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 	<script src="js/interact.js"></script>
 	<script src="js/interact_demo.js"></script>
 <!-- 	<script src="js/matter.min.js" type="text/javascript"></script>
@@ -18,16 +24,34 @@
 
 </head>
 
-
 <body>
 
-
 	<div id="no-drop" class="draggable drag-drop"> hello world </div>
-	<div id="yes-drop" class="draggable drag-drop"> trigger </div>
+	<div class="draggable drag-drop yes-drop"> trigger </div>
 
 	<div id="outer-dropzone" class="dropzone">#outer-dropzone
 		<div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
 	</div>
+
+	<!-- SVG div -->
+	<div id="plain-text" class="draggable drag-drop yes-drop"></div>
+
+  <script>
+
+    var textData = ["SVG line of text"];
+
+    var width = 300, height = 100;
+
+    var plainText = d3.select("#plain-text")
+    	.append("plainText")
+      .attr("width", width)
+      .attr("height", height);
+
+    plainText.append('text')
+      .append("plainText")
+      .text(textData);
+
+	</script>
 
 </body>
 </html>
