--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,18 @@
 	<meta charset="utf-8">
 	<meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<link type="text/css" rel="stylesheet" href="css/interact_demo.css" />
+	<link type="text/css" rel="stylesheet" href="css/interact.css" />
 
-  <style>
-    div#plain-text {
-    	font-size: 16px;
-    	font-family: sans-serif;
-    }
-  </style>
-
-	<script src="https://d3js.org/d3.v3.min.js"></script>
-	<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
-	<script src="js/interact.js"></script>
-	<script src="js/interact_demo.js"></script>
-<!-- 	<script src="js/matter.min.js" type="text/javascript"></script>
-	<script src="js/matter_chains.js" type="text/javascript"></script> -->
+<!-- 	// <script src="https://d3js.org/d3.v3.min.js"></script>
+	// <script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
+<!-- 	// <script src="js/interact.js"></script>
+	// <script src="js/interact_demo.js"></script> -->
+	<script src="js/matter.min.js" type="text/javascript"></script>
+	<script src="js/matter_chains.js" type="text/javascript"></script>
 
 </head>
 
-<body>
+<body onload='Start()'>
 
 	<div id="no-drop" class="draggable drag-drop"> hello world </div>
 	<div class="draggable drag-drop yes-drop"> trigger </div>
