--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,34 @@
 <head>
 
 	<title>D3 Mobile Testing</title>
-	<meta charset="utf-8">
-	<meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<link type="text/css" rel="stylesheet" href="css/interact.css" />
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width,minimal-ui">
+        <meta name="robots" content="noindex">
 
-<!-- 	// <script src="https://d3js.org/d3.v3.min.js"></script>
-	// <script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
-<!-- 	// <script src="js/interact.js"></script>
-	// <script src="js/interact_demo.js"></script> -->
-	<script src="js/matter.min.js" type="text/javascript"></script>
-	<script src="js/matter_chains.js" type="text/javascript"></script>
+        <!-- only required if using Bodies.fromVertices with concave vertices -->
+        <script type="text/javascript" src="./js/lib/decomp.js"></script>
+
+        <!-- only required if using Matter.RenderPixi -->
+        <script type="text/javascript" src="./js/lib/pixi.js"></script>
+
+        <!-- only required if using Matter.Svg -->
+        <script type="text/javascript" src="./js/lib/pathseg.js"></script>
+
+        <!-- matterjs dev version -->
+        <script type="text/javascript" src="../build/matter-dev.js"></script>
+
+        <!-- only required if using MatterTools -->
+        <link rel="stylesheet" href="./js/lib/matter-tools/matter-tools.css" type="text/css">
+        <script type="text/javascript" src="./js/lib/matter-tools/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="./js/lib/matter-tools/gif/gif.js"></script>
+        <script type="text/javascript" src="./js/lib/matter-tools/matter-tools-dev.js"></script>
+
+        <!-- matter demo code -->
+        <link rel="stylesheet" href="./css/style.css" type="text/css">
+        <script type="text/javascript" src="./js/Examples.js"></script>
+        <script type="text/javascript" src="./js/Demo.js"></script>
+
 
 </head>
 
