--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 	<script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
 	<script src="js/interact.js"></script>
 	<script src="js/interact_demo.js"></script>
+  <script src="js/swifttojs.js"></script>
 <!-- 	<script src="js/matter.min.js" type="text/javascript"></script>
 	<script src="js/matter_chains.js" type="text/javascript"></script> -->
 
