--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<link type="text/css" rel="stylesheet" href="css/d3touch.css" />
+	<link type="text/css" rel="stylesheet" href="css/interact.css" />
 
 <!-- 	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
