change to float-left

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
   <div id="outer-dropzone" class="dropzone">
 
     <span id="sentence1" class="float-left" ></span>
-     <div id="inner-dropzone" class="dropzone inline"></div>
-    <span id="sentence2" class="float-right"></span>
+     <div id="inner-dropzone" class="dropzone inline float-left"></div>
+    <span id="sentence2" class="float-left"></span>
 
   </div>
 
@@ -84,7 +84,7 @@
       .text(sentenceData2);
 
     // data for word
-    var wordData = ["SVG"];
+    var wordData = "cola";
 
     // var wordWidth = 30, wordHeight = 50;
 
