--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
   <title>matter.js</title>
-</head>
-<body>
-<canvas height="300" width="400"></canvas>
 <script src="js/matter.min.js" type="text/javascript"></script>
 <script src="js/matter_chains.js" type="text/javascript"></script>
+</head>
+<body onload='Start()'>
+<!-- <canvas height="300" width="400"></canvas> -->
 </body>
 </html>
