--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>matter.js</title>
 <script src="js/matter.min.js" type="text/javascript"></script>
-<script src="js/matter_chains.js" type="text/javascript"></script>
 </head>
-<body onload='Start()'>
+<body>
 
 </body>
+<script src="js/matter_chains.js" type="text/javascript"></script>
 </html>
