--- a/public/index.html
+++ b/public/index.html
@@ -6,83 +6,90 @@
   <meta charset="utf-8">
   <meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
   <meta name="apple-mobile-web-app-capable" content="yes" />
+
+  <!-- css.bs -->
   <link type="text/css" rel="stylesheet" href="css/interact_demo.css" />
-
-  <style>
-    div {
-      font-family: sans-serif;
-    }
-
-  </style>
-
+  <!-- d3.js -->
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+  <!-- faker.js -->
+  <script src = "js/faker.min.js" type = "text/javascript"></script>
+  <!-- interact.js -->
   <script src="js/interact.js"></script>
+  <!-- our interact js -->
   <script src="js/interact_demo.js"></script>
 
-<!--  <script src="js/matter.min.js" type="text/javascript"></script>
-  <script src="js/matter_chains.js" type="text/javascript"></script> -->
-
 </head>
-
 <body>
-
-<!--   <div id="no-drop" class="draggable drag-drop"> hello world </div>
-  <div class="draggable drag-drop yes-drop"> trigger </div>
- -->
 
   <div id="outer-dropzone" class="dropzone">
 
-    <span id="sentence1" class="float-left" ></span>
+    <span id="sentenceBegin" class="float-left" ></span>
      <div id="inner-dropzone" class="dropzone inline float-left"></div>
-    <span id="sentence2" class="float-left"></span>
+    <span id="sentenceEnd" class="float-left"></span>
 
   </div>
 
+  <!-- div for selected word "wordSplice" -->
+  <div id="word-text" class="draggable drag-drop yes-drop"></div>
+
   <script>
 
-    var fontSize = '20px';
-
     // data for sentence
-    var sentenceData = "Bacon ipsum dolor amet capi boudin burgdoggen ham hock.";
+    var sentenceData = faker.lorem.sentence();
 
-    var length = (sentenceData.length / 2);
-    var sentenceData2 = sentenceData.slice(length);
-    var sentenceData1 = sentenceData.slice(0, length);
+    var splitSentenceData = sentenceData.split(" ");
+    var length = splitSentenceData.length;
+    // return random number between 1 and last index(length-1)?
+    var half = length / 2;
 
+    // array.splice(start, [deleteCount = 1]) => return word fragment DESTRUCTIVE
+    var wordSplice = splitSentenceData.splice(half, 1);
+
+    var sentenceDataBegin = splitSentenceData.slice(0, half).join(" ");
+    var sentenceDataEnd = splitSentenceData.slice(half, length).join(" ");
+    var fontSize = '20px';
     var width = 100, height = 300;
 
-    // first half Sentence
-    var sentenceText = d3.select("#sentence1")
-      .append("sentenceText")
+    // BEGIN Sentence
+    var sentenceTextBegin = d3.select("#sentenceBegin")
       .style('font-size', fontSize)
       .attr("width", width)
       .attr("height", height);
 
-    sentenceText.append('text')
-      .append("sentenceText")
-      .text(sentenceData1);
+    sentenceTextBegin.append('text')
+      .text(sentenceDataBegin);
 
-    // second half
-    var sentenceText2 = d3.select("#sentence2")
-      .append("sentenceText")
+    // END Sentence
+    var sentenceTextEnd = d3.select("#sentenceEnd")
       .style('font-size', fontSize)
       .attr("width", width)
       .attr("height", height);
 
-    sentenceText2.append('text')
-      .append("sentenceText")
-      .text(sentenceData2);
+    sentenceTextEnd.append('text')
+      .text(sentenceDataEnd);
 
     // data for words
-    var wordData = ["cola", "chamois", "cups", "clouds", "clapping", "caitlin"];
+    var wordData = [];
+    for (var i = 0; i < 8; i++) {
+      wordData.push(faker.lorem.word());
+    }
 
     var wordText = d3.select("div")
       .data(wordData)
       .enter().append("div")
-        .text(function(d) { return d; })
+        .text(function(d) { return d; } )
         .style('font-size', fontSize)
-        .attr('class', function(d) { return 'draggable drag-drop'; });
+        .attr('class', function(d) { return 'draggable drag-drop'; } );
+
+    // data for selected word, "wordSplice"
+    var wordText = d3.select("#word-text")
+      .append("wordText")
+      .style('font-size', fontSize);
+
+    wordText.append('text')
+      .append("wordText")
+      .text(wordSplice);
 
   </script>
 
