--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
   <!-- css.bs -->
   <link type="text/css" rel="stylesheet" href="css/interact_demo.css" />
+  <!-- jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- d3.js -->
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
@@ -16,82 +18,21 @@
   <script src = "js/faker.min.js" type = "text/javascript"></script>
   <!-- interact.js -->
   <script src="js/interact.js"></script>
+
   <!-- our interact js -->
   <script src="js/interact_demo.js"></script>
 
+	<!-- our dropzone render -->
+  <script src="js/dropzone_render.js"></script>
+
+  <!-- our word render -->
+  <script src="js/word_render.js"></script>
+  
+  <!-- our game controller -->
+  <script src="js/game_controller.js"></script>
+
+
 </head>
 <body>
-
-  <div id="outer-dropzone" class="dropzone">
-
-    <span id="sentenceBegin" class="float-left" ></span>
-     <div id="inner-dropzone" class="dropzone inline float-left"></div>
-    <span id="sentenceEnd" class="float-left"></span>
-
-  </div>
-
-  <!-- div for selected word "wordSplice" -->
-  <div id="word-text" class="draggable drag-drop yes-drop"></div>
-
-  <script>
-
-    // data for sentence
-    var sentenceData = faker.lorem.sentence();
-
-    var splitSentenceData = sentenceData.split(" ");
-    var length = splitSentenceData.length;
-    // return random number between 1 and last index(length-1)?
-    var half = length / 2;
-
-    // array.splice(start, [deleteCount = 1]) => return word fragment DESTRUCTIVE
-    var wordSplice = splitSentenceData.splice(half, 1);
-
-    var sentenceDataBegin = splitSentenceData.slice(0, half).join(" ");
-    var sentenceDataEnd = splitSentenceData.slice(half, length).join(" ");
-    var fontSize = '20px';
-    var width = 100, height = 300;
-
-    // BEGIN Sentence
-    var sentenceTextBegin = d3.select("#sentenceBegin")
-      .style('font-size', fontSize)
-      .attr("width", width)
-      .attr("height", height);
-
-    sentenceTextBegin.append('text')
-      .text(sentenceDataBegin);
-
-    // END Sentence
-    var sentenceTextEnd = d3.select("#sentenceEnd")
-      .style('font-size', fontSize)
-      .attr("width", width)
-      .attr("height", height);
-
-    sentenceTextEnd.append('text')
-      .text(sentenceDataEnd);
-
-    // data for words
-    var wordData = [];
-    for (var i = 0; i < 8; i++) {
-      wordData.push(faker.lorem.word());
-    }
-
-    var wordText = d3.select("div")
-      .data(wordData)
-      .enter().append("div")
-        .text(function(d) { return d; } )
-        .style('font-size', fontSize)
-        .attr('class', function(d) { return 'draggable drag-drop'; } );
-
-    // data for selected word, "wordSplice"
-    var wordText = d3.select("#word-text")
-      .append("wordText")
-      .style('font-size', fontSize);
-
-    wordText.append('text')
-      .append("wordText")
-      .text(wordSplice);
-
-  </script>
-
 </body>
 </html>
