move dropzone to centerish of wave

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <div id="outer-dropzone" class="dropzone">
 
     <span id="sentenceBegin" class="float-left" ></span>
-     <div id="inner-dropzone" class="dropzone inline float-left"></div>
+     <div id="inner-dropzone" class="dropzone"></div>
     <span id="sentenceEnd" class="float-left"></span>
 
   </div>
@@ -39,7 +39,7 @@
   <script>
 
     var fontSize = '20px';
-    var width = 800, height = 300;
+    var width = 600, height = 300;
 
     // data for sentence
     var sentenceData = faker.lorem.sentence();
