--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>D3 Mobile Testing</title>
- <meta charset="utf-8">
- <link type="text/css" rel="stylesheet" href="css/d3touch.css" />
+  <title>D3 Mobile Testing</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
+  <!-- css -->
+  <link type="text/css" rel="stylesheet" href="css/p2_demo.css" />
+  <!-- p2 -->
+  <script src="js/p2.min.js"></script>
+  <script src="js/p2.renderer.min.js"></script>
+
 </head>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
-<script src="js/interact.js"></script>
-<script src="js/d3touch.js"></script>
 <body>
-<div id="no-drop" class="draggable drag-drop"> hello world </div>
 
-<div id="yes-drop" class="draggable drag-drop"> trigger </div>
+  <script src="js/p2_demo.js"></script>
 
-<div id="outer-dropzone" class="dropzone">
-  #outer-dropzone
-<div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
-</div>
 </body>
 </html>
