--- a/public/index.html
+++ b/public/index.html
@@ -33,5 +33,11 @@
 
 </head>
 <body>
+  <div id="outer-dropzone" class="dropzone">
+    <img id="pipe" class="draggable yes-drop" src="/images/infamous-pipe.gif" alt="matt">
+    <p class="message">Drag the pipe where it belongs...</p>
+    <img id="matt" class="dropzone" src="/images/infamous-pipe-glow.gif" alt="matt">
+    <!-- <div id="inner-dropzone" class="dropzone"></div> -->
+  </div>
 </body>
 </html>
