--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
   <!-- jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- d3.js -->
-  <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+  <!-- // <script src="https://d3js.org/d3.v3.min.js"></script> -->
+  <!-- // <script src="https://d3js.org/colorbrewer.v1.min.js"></script> -->
   <!-- faker.js -->
-  <script src = "js/faker.min.js" type = "text/javascript"></script>
+  <!-- // <script src = "js/faker.min.js" type = "text/javascript"></script> -->
   <!-- interact.js -->
   <script src="js/interact.js"></script>
 
@@ -23,10 +23,10 @@
   <script src="js/interact_demo.js"></script>
 
 	<!-- our dropzone render -->
-  <script src="js/dropzone_render.js"></script>
+  <!-- // <script src="js/dropzone_render.js"></script> -->
 
   <!-- our word render -->
-  <script src="js/word_render.js"></script>
+  <!-- // <script src="js/word_render.js"></script> -->
 
   <!-- our game controller -->
   <script src="js/game_controller.js"></script>
