remove semicolons causing error in viewport

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
   <title>D3 Mobile Testing</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width; minimum-scale=0.8; maximum-scale=0.8; user-scalable=no">
+  <meta name="viewport" content="width=device-width, minimum-scale=0.8, maximum-scale=0.8, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <!-- css.bs -->
