--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 
   <title>D3 Mobile Testing</title>
   <meta charset="utf-8">
-  <meta name = "viewport" content = "user-scalable=no, width=device-width,minimal-ui">
+      <meta name="viewport" content="width=device-width; minimum-scale=0.8; maximum-scale=0.8; user-scalable=no">
+          
+
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <!-- css.bs -->
@@ -22,15 +24,14 @@
   <!-- our interact js -->
   <script src="js/interact_demo.js"></script>
 
-	<!-- our dropzone render -->
+  <!-- our dropzone render -->
   <script src="js/dropzone_render.js"></script>
 
   <!-- our word render -->
   <script src="js/word_render.js"></script>
-  
+
   <!-- our game controller -->
   <script src="js/game_controller.js"></script>
-
 
 </head>
 <body>
